# KFZ-Versicherung

./: CMakeLists.txt  KFZSchein.cpp  KFZSchein.h  LVSchein.cpp  LVSchein.h  README.md  VSchein.cpp  VSchein.h  Versicherer.cpp  Versicherer.h  main.cpp
